2003-03-10  Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/signals/Signal.chs-boot2, gtk/general/Gtk.hs: Added a
	function to disconnect a signal.

	* mogul/TreeList.hs, mogul/Mogul.hs: Added changed the TreePath
	from Gtk to Mogul style. Patch by Duncan Coutts.
	
2003-03-08  Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/abstract/Widget.chs, gtk/general/Enums.chs,
	gtk/general/Gtk.hs, gtk/general/Structs.hsc,
	gtk/treeList/TreeModel.chs, gtk/treeList/TreeView.chs: Completed
	TreeView.chs with the exception of DND support.

2003-02-27  Axel Simon <A.Simon@ukc.ac.uk>

	* demo/concurrent/Progress.hs demo/concurrent/Makefile: Added an
	example how concurrent Haskell threads can be run even if Gtk's
	main loop is running.

	* gtk/general/General.chs: Exported the three different priorities
	for idle handlers from Struct.hsc.
	
2003-02-10  Axel Simon <A.Simon@ukc.ac.uk>

	* demo/graphic/Drawing.hs gtk/gdk/Drawable.chs
	gtk/pango/PangoLayout.chsgtk/typehier/hierarchy.list
	gtk/pango/PangoTypes.chs: Completed PangoLayout as far as possible.
	Make the Drawing demo display some text.

2003-02-09  Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/abstract/Widget.chs gtk/general/Gtk.hs
	gtk/general/Structs.hsc gtk/glib/GList.chs gtk/pango/Markup.hs
	gtk/pango/Rendering.chs gtk/pango/PangoLayout.chs: Started on the
	layout functions of Pango to draw text.
	
2003-02-07  Axel Simon <A.Simon@ukc.ac.uk>

	* mk/config.mk.in: added the variable CC so that the C compiler
	can be overridden with CC=blah ./configure

	* configure.in: don't call SUBST on GTK_CFLAGS and GTK_LIBS since
	it's done by the GTK macros earlier

2003-01-22  Axel Simon <A.Simon@ukc.ac.uk>

	* gendoc/Makefile: forgot to add this file.
	
2003-01-21  Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/wingtk.h: This file is needed for building on Windows. It
	disables a check of gtk_init_check to see whether the header has
	been compiled with Microsoft bitfields (which is true for hsc2hs
	where we mangle structure but false for c2hs where we call this